Add abi, inheritance graph, report

--- a/report/contracts/FastLaneAuction.sol.func-sort-c.html
+++ b/report/contracts/FastLaneAuction.sol.func-sort-c.html
@@ -31,17 +31,17 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">175</td>
-            <td class="headerCovTableEntry">175</td>
+            <td class="headerCovTableEntry">178</td>
+            <td class="headerCovTableEntry">178</td>
             <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">41</td>
-            <td class="headerCovTableEntry">41</td>
+            <td class="headerCovTableEntry">43</td>
+            <td class="headerCovTableEntry">43</td>
             <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr>
@@ -49,9 +49,9 @@
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">66</td>
+            <td class="headerCovTableEntry">70</td>
             <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntryMed">89.2 %</td>
+            <td class="headerCovTableEntryHi">94.6 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,167 +69,175 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#898">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#180">FastLaneAuction._authorizeUpgrade</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#844">FastLaneAuction.getPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#914">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#331">FastLaneAuction.setBidToken</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#860">FastLaneAuction.getPreferences</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#294">FastLaneAuction.setOps</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#174">FastLaneAuction.initialize</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#278">FastLaneAuction.setPausedState</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#347">FastLaneAuction.setBidToken</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#346">FastLaneAuction.setStarter</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#294">FastLaneAuction.setPausedState</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#486">FastLaneAuction.withdrawStuckNativeToken</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#362">FastLaneAuction.setStarter</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#422">FastLaneAuction.disableValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#502">FastLaneAuction.withdrawStuckNativeToken</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#438">FastLaneAuction.disableValidatorAddress</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#869">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#885">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#852">FastLaneAuction.findLiveAuctionTopBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#868">FastLaneAuction.findLiveAuctionTopBid</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#830">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#846">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#815">FastLaneAuction.getStatus</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#831">FastLaneAuction.getStatus</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#172">FastLaneAuction.initialSetupAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#188">FastLaneAuction.initialSetupAuction</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#286">FastLaneAuction.setMinimumBidIncrement</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#302">FastLaneAuction.setMinimumBidIncrement</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#479">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#495">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#310">FastLaneAuction.setResolverMaxGasPrice</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#310">FastLaneAuction.setOps</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#500">FastLaneAuction.withdrawStuckERC20</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#326">FastLaneAuction.setResolverMaxGasPrice</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#823">FastLaneAuction.getValidatorsactiveAtAuctionRound</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#516">FastLaneAuction.withdrawStuckERC20</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#839">FastLaneAuction.getValidatorsactiveAtAuctionRound</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#471">FastLaneAuction.setAutopayBatchSize</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#487">FastLaneAuction.setAutopayBatchSize</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#369">FastLaneAuction.disableOpportunityAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#385">FastLaneAuction.disableOpportunityAddress</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#302">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#318">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#544">FastLaneAuction._refundPreviousBidder</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#560">FastLaneAuction._refundPreviousBidder</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#766">FastLaneAuction.processAutopayJobs</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#782">FastLaneAuction.processAutopayJobs</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#267">FastLaneAuction.setValidatorPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#283">FastLaneAuction.setValidatorPreferences</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#318">FastLaneAuction.setFastlaneFee</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#334">FastLaneAuction.setFastlaneFee</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#411">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#427">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#790">FastLaneAuction.getAutopayJobs</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#806">FastLaneAuction.getAutopayJobs</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#251">FastLaneAuction._updateValidatorPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#267">FastLaneAuction._updateValidatorPreferences</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#724">FastLaneAuction.redeemOutstandingBalance</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#740">FastLaneAuction.redeemOutstandingBalance</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#837">FastLaneAuction.getCheckpoint</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#853">FastLaneAuction.getCheckpoint</a></td>
               <td class="coverFnHi">13</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#399">FastLaneAuction.enableValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#415">FastLaneAuction.enableValidatorAddress</a></td>
               <td class="coverFnHi">14</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#573">FastLaneAuction._redeemOutstanding</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#589">FastLaneAuction._redeemOutstanding</a></td>
               <td class="coverFnHi">16</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#740">FastLaneAuction.checker</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#756">FastLaneAuction.checker</a></td>
               <td class="coverFnHi">17</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#356">FastLaneAuction.enableOpportunityAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#372">FastLaneAuction.enableOpportunityAddress</a></td>
               <td class="coverFnHi">17</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#384">FastLaneAuction._enableValidatorCheckpoint</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#400">FastLaneAuction._enableValidatorCheckpoint</a></td>
               <td class="coverFnHi">21</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#444">FastLaneAuction.endAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#460">FastLaneAuction.endAuction</a></td>
               <td class="coverFnHi">21</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#436">FastLaneAuction.startAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#452">FastLaneAuction.startAuction</a></td>
               <td class="coverFnHi">29</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#519">FastLaneAuction._receiveBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#535">FastLaneAuction._receiveBid</a></td>
               <td class="coverFnHi">32</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#556">FastLaneAuction._calculateCuts</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#572">FastLaneAuction._calculateCuts</a></td>
               <td class="coverFnHi">41</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#623">FastLaneAuction.submitBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#639">FastLaneAuction.submitBid</a></td>
               <td class="coverFnHi">41</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#566">FastLaneAuction._checkRedeemableOutstanding</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#582">FastLaneAuction._checkRedeemableOutstanding</a></td>
               <td class="coverFnHi">47</td>
             </tr>
   </table>
