--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">182</td>
-            <td class="headerCovTableEntry">212</td>
-            <td class="headerCovTableEntryMed">85.8 %</td>
+            <td class="headerCovTableEntry">202</td>
+            <td class="headerCovTableEntry">328</td>
+            <td class="headerCovTableEntryLo">61.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">43</td>
-            <td class="headerCovTableEntry">48</td>
-            <td class="headerCovTableEntryMed">89.6 %</td>
+            <td class="headerCovTableEntry">51</td>
+            <td class="headerCovTableEntry">72</td>
+            <td class="headerCovTableEntryLo">70.8 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">68</td>
-            <td class="headerCovTableEntry">84</td>
-            <td class="headerCovTableEntryMed">81.0 %</td>
+            <td class="headerCovTableEntry">80</td>
+            <td class="headerCovTableEntry">116</td>
+            <td class="headerCovTableEntryLo">69.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,38 @@
     <tr>
       <td class="coverFile"><a href="contracts/index.html">contracts</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.3%"><img src="snow.png" width=3 height=10 alt="97.3%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=94 height=10 alt="94.2%"><img src="snow.png" width=6 height=10 alt="94.2%"></td></tr></table>
       </td>
-      <td class="coverPerHi">97.3&nbsp;%</td>
-      <td class="coverNumHi">182 / 187</td>
-      <td class="coverPerHi">97.7&nbsp;%</td>
-      <td class="coverNumHi">43 / 44</td>
-      <td class="coverPerMed">85.0&nbsp;%</td>
-      <td class="coverNumMed">68 / 80</td>
+      <td class="coverPerHi">94.2&nbsp;%</td>
+      <td class="coverNumHi">178 / 189</td>
+      <td class="coverPerHi">93.5&nbsp;%</td>
+      <td class="coverNumHi">43 / 46</td>
+      <td class="coverPerMed">87.5&nbsp;%</td>
+      <td class="coverNumMed">70 / 80</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/jit-relay/index.html">contracts/jit-relay</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=39 height=10 alt="39.3%"><img src="snow.png" width=61 height=10 alt="39.3%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">39.3&nbsp;%</td>
+      <td class="coverNumLo">11 / 28</td>
+      <td class="coverPerLo">22.2&nbsp;%</td>
+      <td class="coverNumLo">2 / 9</td>
+      <td class="coverPerLo">37.5&nbsp;%</td>
+      <td class="coverNumLo">6 / 16</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/jit-searcher/index.html">contracts/jit-searcher</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=86 height=10 alt="85.7%"><img src="snow.png" width=14 height=10 alt="85.7%"></td></tr></table>
+      </td>
+      <td class="coverPerMed">85.7&nbsp;%</td>
+      <td class="coverNumMed">12 / 14</td>
+      <td class="coverPerLo">55.6&nbsp;%</td>
+      <td class="coverNumLo">5 / 9</td>
+      <td class="coverPerLo">50.0&nbsp;%</td>
+      <td class="coverNumLo">4 / 8</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="script/index.html">script</a></td>
@@ -99,21 +123,21 @@
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 23</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 3</td>
+      <td class="coverNumLo">0 / 71</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 4</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 12</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
-                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=4 height=10 alt="3.8%"><img src="snow.png" width=96 height=10 alt="3.8%"></td></tr></table>
       </td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 2</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 1</td>
+      <td class="coverPerLo">3.8&nbsp;%</td>
+      <td class="coverNumLo">1 / 26</td>
+      <td class="coverPerLo">25.0&nbsp;%</td>
+      <td class="coverNumLo">1 / 4</td>
       <td class="coverPerHi">-</td>
       <td class="coverNumHi">0 / 0</td>
     </tr>
