--- a/report/contracts/FastLaneFactory.sol.func-sort-c.html
+++ b/report/contracts/FastLaneFactory.sol.func-sort-c.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntryLo">58.3 %</td>
+            <td class="headerCovTableEntry">0</td>
+            <td class="headerCovTableEntry">11</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">0</td>
             <td class="headerCovTableEntry">3</td>
-            <td class="headerCovTableEntryLo">66.7 %</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">0</td>
             <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntryLo">33.3 %</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -73,12 +73,12 @@
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#32">FastLaneFactory.getArgs</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#31">FastLaneFactory.getArgs</a></td>
+              <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#56">FastLaneFactory.getFastLaneContractBySalt</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#55">FastLaneFactory.getFastLaneContractBySalt</a></td>
+              <td class="coverFnLo">0</td>
             </tr>
   </table>
   <br>
