--- a/report/contracts/FastLaneFactory.sol.gcov.html
+++ b/report/contracts/FastLaneFactory.sol.gcov.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntryLo">58.3 %</td>
+            <td class="headerCovTableEntry">0</td>
+            <td class="headerCovTableEntry">11</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">0</td>
             <td class="headerCovTableEntry">3</td>
-            <td class="headerCovTableEntryLo">66.7 %</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">0</td>
             <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntryLo">33.3 %</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -90,7 +90,7 @@
 <a name="19"><span class="lineNum">      19 </span>                :            :     function _createFastLane(bytes32 _salt, address _initial_bid_token, address _ops) internal {</a>
 <a name="20"><span class="lineNum">      20 </span>                :            :         </a>
 <a name="21"><span class="lineNum">      21 </span>                :            :         // use CREATE2 so we can get a deterministic address based on the salt</a>
-<a name="22"><span class="lineNum">      22 </span>                :<span class="lineNoCov">          0 :         fastlane = address(new FastLaneAuction{salt: _salt}());</span></a>
+<a name="22"><span class="lineNum">      22 </span>                :<span class="lineNoCov">          0 :         fastlane = address(new FastLaneAuction{salt: _salt}(msg.sender));</span></a>
 <a name="23"><span class="lineNum">      23 </span>                :            : </a>
 <a name="24"><span class="lineNum">      24 </span>                :            :         // CREATE2 can return address(0), add a check to verify this isn't the case</a>
 <a name="25"><span class="lineNum">      25 </span>                :            :         // See: https://eips.ethereum.org/EIPS/eip-1014</a>
@@ -98,53 +98,52 @@
 <a name="27"><span class="lineNum">      27 </span>                :<span class="lineNoCov">          0 :         emit FastLaneCreated(fastlane);</span></a>
 <a name="28"><span class="lineNum">      28 </span>                :            : </a>
 <a name="29"><span class="lineNum">      29 </span>                :<span class="lineNoCov">          0 :         FastLaneAuction(fastlane).initialSetupAuction(_initial_bid_token, _ops, msg.sender);</span></a>
-<a name="30"><span class="lineNum">      30 </span>                :            :         // Give back to deployer</a>
-<a name="31"><span class="lineNum">      31 </span>                :<span class="lineNoCov">          0 :         FastLaneAuction(fastlane).transferOwnership(msg.sender);</span></a>
-<a name="32"><span class="lineNum">      32 </span>                :            :     }</a>
-<a name="33"><span class="lineNum">      33 </span>                :            : </a>
-<a name="34"><span class="lineNum">      34 </span>                :            :     function getArgs() public view returns (address initial_bid_token, address ops) {</a>
-<a name="35"><span class="lineNum">      35 </span>                :<span class="lineCov">          2 :         ops = gelatoOpsAddresses[block.chainid];</span></a>
-<a name="36"><span class="lineNum">      36 </span>                :<span class="lineCov">          2 :         initial_bid_token = wrappedNativeAddresses[block.chainid];</span></a>
-<a name="37"><span class="lineNum">      37 </span>                :            :     }</a>
-<a name="38"><span class="lineNum">      38 </span>                :            : </a>
-<a name="39"><span class="lineNum">      39 </span>                :            :     constructor(bytes32 _salt) {</a>
-<a name="40"><span class="lineNum">      40 </span>                :            :         gelatoOpsAddresses[1] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
-<a name="41"><span class="lineNum">      41 </span>                :            :         gelatoOpsAddresses[137] = 0x527a819db1eb0e34426297b03bae11F2f8B3A19E;</a>
-<a name="42"><span class="lineNum">      42 </span>                :            :         gelatoOpsAddresses[80001] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
-<a name="43"><span class="lineNum">      43 </span>                :            :         gelatoOpsAddresses[31337] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
-<a name="44"><span class="lineNum">      44 </span>                :            : </a>
-<a name="45"><span class="lineNum">      45 </span>                :            :         wrappedNativeAddresses[1] = 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2;</a>
-<a name="46"><span class="lineNum">      46 </span>                :            :         wrappedNativeAddresses[137] = 0x0d500B1d8E8eF31E21C99d1Db9A6444d3ADf1270;</a>
-<a name="47"><span class="lineNum">      47 </span>                :            :         wrappedNativeAddresses[80001] = 0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889;</a>
-<a name="48"><span class="lineNum">      48 </span>                :            :         wrappedNativeAddresses[31337] = 0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889;</a>
-<a name="49"><span class="lineNum">      49 </span>                :            : </a>
-<a name="50"><span class="lineNum">      50 </span>                :            :         (address initial_bid_token, address ops) = getArgs();</a>
-<a name="51"><span class="lineNum">      51 </span>                :            : </a>
-<a name="52"><span class="lineNum">      52 </span>                :            :         require(ops != address(0), &quot;O(o)ps&quot;);</a>
-<a name="53"><span class="lineNum">      53 </span>                :            :         require(initial_bid_token != address(0), &quot;Wrapped&quot;);</a>
-<a name="54"><span class="lineNum">      54 </span>                :            : </a>
-<a name="55"><span class="lineNum">      55 </span>                :            :         _createFastLane(_salt, initial_bid_token, ops);</a>
-<a name="56"><span class="lineNum">      56 </span>                :            :     }</a>
-<a name="57"><span class="lineNum">      57 </span>                :            : </a>
-<a name="58"><span class="lineNum">      58 </span>                :            :     function getFastLaneContractBySalt(bytes32 _salt) external view returns(address predictedAddress, bool isDeployed){</a>
-<a name="59"><span class="lineNum">      59 </span>                :            :         </a>
-<a name="60"><span class="lineNum">      60 </span>                :<span class="lineCov">          1 :         (address initial_bid_token, address ops) = getArgs();</span></a>
-<a name="61"><span class="lineNum">      61 </span>                :            : </a>
-<a name="62"><span class="lineNum">      62 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 1 time"> + </span>]:<span class="lineCov">          1 :         require(ops != address(0), &quot;O(o)ps&quot;);</span></a>
-<a name="63"><span class="lineNum">      63 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 1 time"> + </span>]:<span class="lineCov">          1 :         require(initial_bid_token != address(0), &quot;Wrapped&quot;);</span></a>
-<a name="64"><span class="lineNum">      64 </span>                :            : </a>
-<a name="65"><span class="lineNum">      65 </span>                :<span class="lineCov">          1 :         predictedAddress = address(uint160(uint256(keccak256(abi.encodePacked(</span></a>
-<a name="66"><span class="lineNum">      66 </span>                :            :             bytes1(0xff),</a>
-<a name="67"><span class="lineNum">      67 </span>                :            :             address(this),</a>
-<a name="68"><span class="lineNum">      68 </span>                :            :             _salt,</a>
-<a name="69"><span class="lineNum">      69 </span>                :            :             keccak256(abi.encodePacked(</a>
-<a name="70"><span class="lineNum">      70 </span>                :            :                 type(FastLaneAuction).creationCode</a>
-<a name="71"><span class="lineNum">      71 </span>                :            :             )</a>
-<a name="72"><span class="lineNum">      72 </span>                :            :         ))))));</a>
-<a name="73"><span class="lineNum">      73 </span>                :<span class="lineCov">          1 :         isDeployed = predictedAddress.code.length != 0;</span></a>
-<a name="74"><span class="lineNum">      74 </span>                :            :     }</a>
-<a name="75"><span class="lineNum">      75 </span>                :            : </a>
-<a name="76"><span class="lineNum">      76 </span>                :            : }</a>
+<a name="30"><span class="lineNum">      30 </span>                :            : </a>
+<a name="31"><span class="lineNum">      31 </span>                :            :     }</a>
+<a name="32"><span class="lineNum">      32 </span>                :            : </a>
+<a name="33"><span class="lineNum">      33 </span>                :            :     function getArgs() public view returns (address initial_bid_token, address ops) {</a>
+<a name="34"><span class="lineNum">      34 </span>                :<span class="lineNoCov">          0 :         ops = gelatoOpsAddresses[block.chainid];</span></a>
+<a name="35"><span class="lineNum">      35 </span>                :<span class="lineNoCov">          0 :         initial_bid_token = wrappedNativeAddresses[block.chainid];</span></a>
+<a name="36"><span class="lineNum">      36 </span>                :            :     }</a>
+<a name="37"><span class="lineNum">      37 </span>                :            : </a>
+<a name="38"><span class="lineNum">      38 </span>                :            :     constructor(bytes32 _salt) {</a>
+<a name="39"><span class="lineNum">      39 </span>                :            :         gelatoOpsAddresses[1] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
+<a name="40"><span class="lineNum">      40 </span>                :            :         gelatoOpsAddresses[137] = 0x527a819db1eb0e34426297b03bae11F2f8B3A19E;</a>
+<a name="41"><span class="lineNum">      41 </span>                :            :         gelatoOpsAddresses[80001] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
+<a name="42"><span class="lineNum">      42 </span>                :            :         gelatoOpsAddresses[31337] = 0xB3f5503f93d5Ef84b06993a1975B9D21B962892F;</a>
+<a name="43"><span class="lineNum">      43 </span>                :            : </a>
+<a name="44"><span class="lineNum">      44 </span>                :            :         wrappedNativeAddresses[1] = 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2;</a>
+<a name="45"><span class="lineNum">      45 </span>                :            :         wrappedNativeAddresses[137] = 0x0d500B1d8E8eF31E21C99d1Db9A6444d3ADf1270;</a>
+<a name="46"><span class="lineNum">      46 </span>                :            :         wrappedNativeAddresses[80001] = 0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889;</a>
+<a name="47"><span class="lineNum">      47 </span>                :            :         wrappedNativeAddresses[31337] = 0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889;</a>
+<a name="48"><span class="lineNum">      48 </span>                :            : </a>
+<a name="49"><span class="lineNum">      49 </span>                :            :         (address initial_bid_token, address ops) = getArgs();</a>
+<a name="50"><span class="lineNum">      50 </span>                :            : </a>
+<a name="51"><span class="lineNum">      51 </span>                :            :         require(ops != address(0), &quot;O(o)ps&quot;);</a>
+<a name="52"><span class="lineNum">      52 </span>                :            :         require(initial_bid_token != address(0), &quot;Wrapped&quot;);</a>
+<a name="53"><span class="lineNum">      53 </span>                :            : </a>
+<a name="54"><span class="lineNum">      54 </span>                :            :         _createFastLane(_salt, initial_bid_token, ops);</a>
+<a name="55"><span class="lineNum">      55 </span>                :            :     }</a>
+<a name="56"><span class="lineNum">      56 </span>                :            : </a>
+<a name="57"><span class="lineNum">      57 </span>                :            :     function getFastLaneContractBySalt(bytes32 _salt) external view returns(address predictedAddress, bool isDeployed){</a>
+<a name="58"><span class="lineNum">      58 </span>                :            :         </a>
+<a name="59"><span class="lineNum">      59 </span>                :<span class="lineNoCov">          0 :         (address initial_bid_token, address ops) = getArgs();</span></a>
+<a name="60"><span class="lineNum">      60 </span>                :            : </a>
+<a name="61"><span class="lineNum">      61 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineNoCov">          0 :         require(ops != address(0), &quot;O(o)ps&quot;);</span></a>
+<a name="62"><span class="lineNum">      62 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineNoCov">          0 :         require(initial_bid_token != address(0), &quot;Wrapped&quot;);</span></a>
+<a name="63"><span class="lineNum">      63 </span>                :            : </a>
+<a name="64"><span class="lineNum">      64 </span>                :<span class="lineNoCov">          0 :         predictedAddress = address(uint160(uint256(keccak256(abi.encodePacked(</span></a>
+<a name="65"><span class="lineNum">      65 </span>                :            :             bytes1(0xff),</a>
+<a name="66"><span class="lineNum">      66 </span>                :            :             address(this),</a>
+<a name="67"><span class="lineNum">      67 </span>                :            :             _salt,</a>
+<a name="68"><span class="lineNum">      68 </span>                :            :             keccak256(abi.encodePacked(</a>
+<a name="69"><span class="lineNum">      69 </span>                :            :                 type(FastLaneAuction).creationCode</a>
+<a name="70"><span class="lineNum">      70 </span>                :            :             )</a>
+<a name="71"><span class="lineNum">      71 </span>                :            :         ))))));</a>
+<a name="72"><span class="lineNum">      72 </span>                :<span class="lineNoCov">          0 :         isDeployed = predictedAddress.code.length != 0;</span></a>
+<a name="73"><span class="lineNum">      73 </span>                :            :     }</a>
+<a name="74"><span class="lineNum">      74 </span>                :            : </a>
+<a name="75"><span class="lineNum">      75 </span>                :            : }</a>
 </pre>
       </td>
     </tr>
