--- a/report/script/EOADeploy.s.sol.gcov.html
+++ b/report/script/EOADeploy.s.sol.gcov.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">0</td>
@@ -115,7 +115,7 @@
 <a name="44"><span class="lineNum">      44 </span>                :            :         // vm.startBroadcast(vm.addr(deployerPrivateKey));</a>
 <a name="45"><span class="lineNum">      45 </span>                :            : </a>
 <a name="46"><span class="lineNum">      46 </span>                :<span class="lineNoCov">          0 :         vm.startBroadcast();</span></a>
-<a name="47"><span class="lineNum">      47 </span>                :<span class="lineNoCov">          0 :         fastlane = address(new FastLaneAuction());</span></a>
+<a name="47"><span class="lineNum">      47 </span>                :<span class="lineNoCov">          0 :         fastlane = address(new FastLaneAuction(msg.sender));</span></a>
 <a name="48"><span class="lineNum">      48 </span>                :            :         </a>
 <a name="49"><span class="lineNum">      49 </span>                :<span class="lineNoCov">          0 :         FastLaneAuction(fastlane).initialSetupAuction(initial_bid_token, ops, msg.sender);</span></a>
 <a name="50"><span class="lineNum">      50 </span>                :            : </a>
