--- a/report/script/UUPSDeploy.s.sol.func-sort-c.html
+++ b/report/script/UUPSDeploy.s.sol.func-sort-c.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>LCOV - lcov.info - contracts/FastLaneFactory.sol - functions</title>
+  <title>LCOV - lcov.info - script/UUPSDeploy.s.sol - functions</title>
   <link rel="stylesheet" type="text/css" href="../gcov.css">
 </head>
 
@@ -19,7 +19,7 @@
         <table cellpadding=1 border=0 width="100%">
           <tr>
             <td width="10%" class="headerItem">Current view:</td>
-            <td width="35%" class="headerValue"><a href="../index.html">top level</a> - <a href="index.html">contracts</a> - FastLaneFactory.sol<span style="font-size: 80%;"> (<a href="FastLaneFactory.sol.gcov.html">source</a> / functions)</span></td>
+            <td width="35%" class="headerValue"><a href="../index.html">top level</a> - <a href="index.html">script</a> - UUPSDeploy.s.sol<span style="font-size: 80%;"> (<a href="UUPSDeploy.s.sol.gcov.html">source</a> / functions)</span></td>
             <td width="5%"></td>
             <td width="15%"></td>
             <td width="10%" class="headerCovTableHead">Hit</td>
@@ -32,7 +32,7 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">11</td>
+            <td class="headerCovTableEntry">54</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
@@ -41,7 +41,7 @@
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">2</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
@@ -50,7 +50,7 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">6</td>
+            <td class="headerCovTableEntry">8</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
@@ -65,19 +65,15 @@
   <table width="60%" cellpadding=1 cellspacing=1 border=0>
     <tr><td><br></td></tr>
     <tr>
-      <td width="80%" class="tableHead">Function Name <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by function name" title="Sort by function name" border=0></span></td>
-      <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneFactory.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
+      <td width="80%" class="tableHead">Function Name <span class="tableHeadSort"><a href="UUPSDeploy.s.sol.func.html"><img src="../updown.png" width=10 height=14 alt="Sort by function name" title="Sort by function name" border=0></a></span></td>
+      <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#17">FastLaneFactory._createFastLane</a></td>
+              <td class="coverFn"><a href="UUPSDeploy.s.sol.gcov.html#17">Deploy.getArgs</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#31">FastLaneFactory.getArgs</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneFactory.sol.gcov.html#55">FastLaneFactory.getFastLaneContractBySalt</a></td>
+              <td class="coverFn"><a href="UUPSDeploy.s.sol.gcov.html#22">Deploy.run</a></td>
               <td class="coverFnLo">0</td>
             </tr>
   </table>
