--- a/report/script/index-sort-l.html
+++ b/report/script/index-sort-l.html
@@ -32,16 +32,16 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">23</td>
+            <td class="headerCovTableEntry">71</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">4</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
@@ -50,7 +50,7 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntry">12</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
@@ -82,18 +82,6 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><a href="index-sort-b.html"><img src="../updown.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></a></span></td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="PreProxyDeploy.s.sol.gcov.html">PreProxyDeploy.s.sol</a></td>
-      <td class="coverBar" align="center">
-                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
-      </td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 6</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 1</td>
-      <td class="coverPerHi">-</td>
-      <td class="coverNumHi">0 / 0</td>
-    </tr>
-    <tr>
       <td class="coverFile"><a href="EOADeploy.s.sol.gcov.html">EOADeploy.s.sol</a></td>
       <td class="coverBar" align="center">
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
@@ -104,6 +92,18 @@
       <td class="coverNumLo">0 / 2</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 4</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="UUPSDeploy.s.sol.gcov.html">UUPSDeploy.s.sol</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 54</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 8</td>
     </tr>
   </table>
   </center>
