--- a/report/test/PFLAuction.t.sol.func.html
+++ b/report/test/PFLAuction.t.sol.func.html
@@ -32,16 +32,16 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">25</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">1</td>
+            <td class="headerCovTableEntry">3</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
@@ -69,7 +69,15 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="PFLAuction.t.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#76">PFLHelper._calculateCuts</a></td>
+              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#83">PFLHelper._calculateCuts</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#108">PFLHelper.setUpBiddersSearchersWallets</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#88">PFLHelper.setUpFastlane</a></td>
               <td class="coverFnLo">0</td>
             </tr>
   </table>
