--- a/report/test/index-sort-l.html
+++ b/report/test/index-sort-l.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntryLo">0.0 %</td>
+            <td class="headerCovTableEntry">1</td>
+            <td class="headerCovTableEntry">26</td>
+            <td class="headerCovTableEntryLo">3.8 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-08-30 00:50:20</td>
+            <td class="headerValue">2022-09-13 05:18:59</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">0</td>
             <td class="headerCovTableEntry">1</td>
-            <td class="headerCovTableEntryLo">0.0 %</td>
+            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntryLo">25.0 %</td>
           </tr>
           <tr>
             <td></td>
@@ -87,9 +87,21 @@
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 2</td>
+      <td class="coverNumLo">0 / 25</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 1</td>
+      <td class="coverNumLo">0 / 3</td>
+      <td class="coverPerHi">-</td>
+      <td class="coverNumHi">0 / 0</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="PFL_Relay.t.sol.gcov.html">PFL_Relay.t.sol</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
+      </td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">1 / 1</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">1 / 1</td>
       <td class="coverPerHi">-</td>
       <td class="coverNumHi">0 / 0</td>
     </tr>
