Relay Test Updates (P2)

--- a/report/contracts/jit-relay/FastLaneRelay.sol.func.html
+++ b/report/contracts/jit-relay/FastLaneRelay.sol.func.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">11</td>
-            <td class="headerCovTableEntry">28</td>
-            <td class="headerCovTableEntryLo">39.3 %</td>
+            <td class="headerCovTableEntry">36</td>
+            <td class="headerCovTableEntry">91</td>
+            <td class="headerCovTableEntryLo">39.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-09-13 05:18:59</td>
+            <td class="headerValue">2022-11-15 10:35:49</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">2</td>
             <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntryLo">22.2 %</td>
+            <td class="headerCovTableEntry">30</td>
+            <td class="headerCovTableEntryLo">30.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntry">16</td>
-            <td class="headerCovTableEntryLo">37.5 %</td>
+            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">42</td>
+            <td class="headerCovTableEntryLo">35.7 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,40 +69,124 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneRelay.sol.func-sort-c.html"><img src="../../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#117">FastLaneRelay.DOMAIN_SEPARATOR</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#206">FastLaneRelay.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#99">FastLaneRelay._calculateRelayCuts</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#200">FastLaneRelay._calculateStakeShare</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#161">FastLaneRelay._checkBid</a></td>
+              <td class="coverFnHi">11</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#182">FastLaneRelay._handleBalances</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#357">FastLaneRelay._isPayeeNotTimeLocked</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#105">FastLaneRelay.checkAllowedInAuction</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#361">FastLaneRelay._isValidPayee</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#121">FastLaneRelay.computeDomainSeparator</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#365">FastLaneRelay._validatorPayee</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#165">FastLaneRelay.disableRelayValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#271">FastLaneRelay.disableRelayValidator</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#160">FastLaneRelay.enableRelayValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#260">FastLaneRelay.enableRelayValidator</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#403">FastLaneRelay.getCurrentStakeBalance</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#150">FastLaneRelay.setFastlaneRelayFee</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#399">FastLaneRelay.getCurrentStakeRatio</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#141">FastLaneRelay.setPausedState</a></td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#411">FastLaneRelay.getPendingDeadline</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#66">FastLaneRelay.submitFlashBid</a></td>
-              <td class="coverFnHi">5</td>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#407">FastLaneRelay.getPendingStakeRatio</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#383">FastLaneRelay.getValidatorBalance</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#388">FastLaneRelay.getValidatorPayee</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#395">FastLaneRelay.getValidatorRecipient</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#415">FastLaneRelay.getValidatorStatus</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#419">FastLaneRelay.humanizeError</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#330">FastLaneRelay.payValidator</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#280">FastLaneRelay.recoverDust</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#232">FastLaneRelay.setFastLaneStakeShare</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#224">FastLaneRelay.setMininumBidAmount</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#216">FastLaneRelay.setPausedState</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#425">FastLaneRelay.slice</a></td>
+              <td class="coverFnHi">4</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#123">FastLaneRelay.submitFlashBid</a></td>
+              <td class="coverFnHi">15</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#375">FastLaneRelay.triggerPendingStakeShareUpdate</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#347">FastLaneRelay.updateValidatorPayee</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#245">FastLaneRelay.withdrawStakeShare</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#309">FastLaneRelay.withdrawStuckERC20</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneRelay.sol.gcov.html#295">FastLaneRelay.withdrawStuckNativeToken</a></td>
+              <td class="coverFnLo">0</td>
             </tr>
   </table>
   <br>
