--- a/report/contracts/jit-searcher/index.html
+++ b/report/contracts/jit-searcher/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntry">14</td>
-            <td class="headerCovTableEntryMed">85.7 %</td>
+            <td class="headerCovTableEntry">23</td>
+            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntryHi">92.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-09-13 05:18:59</td>
+            <td class="headerValue">2022-11-15 10:35:49</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">7</td>
             <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntryLo">55.6 %</td>
+            <td class="headerCovTableEntryMed">77.8 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">4</td>
-            <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntry">9</td>
+            <td class="headerCovTableEntry">22</td>
+            <td class="headerCovTableEntryLo">40.9 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -82,28 +82,16 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><a href="index-sort-b.html"><img src="../../updown.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></a></span></td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="MinimalSearcherContractContextOwnable.sol.gcov.html">MinimalSearcherContractContextOwnable.sol</a></td>
+      <td class="coverFile"><a href="FastLaneSearcherWrapper.sol.gcov.html">FastLaneSearcherWrapper.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../amber.png" width=75 height=10 alt="75.0%"><img src="../../snow.png" width=25 height=10 alt="75.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../emerald.png" width=92 height=10 alt="92.0%"><img src="../../snow.png" width=8 height=10 alt="92.0%"></td></tr></table>
       </td>
-      <td class="coverPerMed">75.0&nbsp;%</td>
-      <td class="coverNumMed">3 / 4</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">2 / 4</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">1 / 2</td>
-    </tr>
-    <tr>
-      <td class="coverFile"><a href="MinimalSearcherRawContract.sol.gcov.html">MinimalSearcherRawContract.sol</a></td>
-      <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../emerald.png" width=90 height=10 alt="90.0%"><img src="../../snow.png" width=10 height=10 alt="90.0%"></td></tr></table>
-      </td>
-      <td class="coverPerHi">90.0&nbsp;%</td>
-      <td class="coverNumHi">9 / 10</td>
-      <td class="coverPerLo">60.0&nbsp;%</td>
-      <td class="coverNumLo">3 / 5</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">3 / 6</td>
+      <td class="coverPerHi">92.0&nbsp;%</td>
+      <td class="coverNumHi">23 / 25</td>
+      <td class="coverPerMed">77.8&nbsp;%</td>
+      <td class="coverNumMed">7 / 9</td>
+      <td class="coverPerLo">40.9&nbsp;%</td>
+      <td class="coverNumLo">9 / 22</td>
     </tr>
   </table>
   </center>
