--- a/report/test/PFLAuction.t.sol.func.html
+++ b/report/test/PFLAuction.t.sol.func.html
@@ -32,12 +32,12 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntry">27</td>
             <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-09-13 05:18:59</td>
+            <td class="headerValue">2022-11-15 10:35:49</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">0</td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntryHi">-</td>
+            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntryLo">0.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -73,11 +73,11 @@
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#108">PFLHelper.setUpBiddersSearchersWallets</a></td>
+              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#112">PFLHelper.setUpBiddersSearchersWallets</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#88">PFLHelper.setUpFastlane</a></td>
+              <td class="coverFn"><a href="PFLAuction.t.sol.gcov.html#88">PFLHelper.setUpMaticAndFastlane</a></td>
               <td class="coverFnLo">0</td>
             </tr>
   </table>
