--- a/report/test/index-sort-f.html
+++ b/report/test/index-sort-f.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">1</td>
-            <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntryLo">3.8 %</td>
+            <td class="headerCovTableEntry">7</td>
+            <td class="headerCovTableEntry">35</td>
+            <td class="headerCovTableEntryLo">20.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-09-13 05:18:59</td>
+            <td class="headerValue">2022-11-15 10:35:49</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">1</td>
-            <td class="headerCovTableEntry">4</td>
-            <td class="headerCovTableEntryLo">25.0 %</td>
+            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">8</td>
+            <td class="headerCovTableEntryLo">37.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntry">0</td>
-            <td class="headerCovTableEntryHi">-</td>
+            <td class="headerCovTableEntry">1</td>
+            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntryLo">25.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -87,23 +87,23 @@
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 25</td>
+      <td class="coverNumLo">0 / 27</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 3</td>
-      <td class="coverPerHi">-</td>
-      <td class="coverNumHi">0 / 0</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="PFL_Relay.t.sol.gcov.html">PFL_Relay.t.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=88 height=10 alt="87.5%"><img src="../snow.png" width=12 height=10 alt="87.5%"></td></tr></table>
       </td>
-      <td class="coverPerHi">100.0&nbsp;%</td>
-      <td class="coverNumHi">1 / 1</td>
-      <td class="coverPerHi">100.0&nbsp;%</td>
-      <td class="coverNumHi">1 / 1</td>
-      <td class="coverPerHi">-</td>
-      <td class="coverNumHi">0 / 0</td>
+      <td class="coverPerMed">87.5&nbsp;%</td>
+      <td class="coverNumMed">7 / 8</td>
+      <td class="coverPerLo">60.0&nbsp;%</td>
+      <td class="coverNumLo">3 / 5</td>
+      <td class="coverPerLo">50.0&nbsp;%</td>
+      <td class="coverNumLo">1 / 2</td>
     </tr>
   </table>
   </center>
