Relay Test Updates (P3)

--- a/report/contracts/jit-searcher/FastLaneSearcherWrapper.sol.func.html
+++ b/report/contracts/jit-searcher/FastLaneSearcherWrapper.sol.func.html
@@ -32,17 +32,17 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">23</td>
-            <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryHi">92.0 %</td>
+            <td class="headerCovTableEntry">27</td>
+            <td class="headerCovTableEntryMed">85.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 10:35:49</td>
+            <td class="headerValue">2022-11-15 17:07:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntryMed">77.8 %</td>
+            <td class="headerCovTableEntry">10</td>
+            <td class="headerCovTableEntryLo">70.0 %</td>
           </tr>
           <tr>
             <td></td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntry">22</td>
-            <td class="headerCovTableEntryLo">40.9 %</td>
+            <td class="headerCovTableEntry">24</td>
+            <td class="headerCovTableEntryLo">37.5 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,7 +69,7 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneSearcherWrapper.sol.func-sort-c.html"><img src="../../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#90">FastLaneSearcherWrapper.</a></td>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#95">FastLaneSearcherWrapper.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
@@ -77,7 +77,7 @@
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#78">FastLaneSearcherWrapper.checkFastLaneEOA</a></td>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#83">FastLaneSearcherWrapper.checkFastLaneEOA</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
@@ -85,7 +85,11 @@
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#82">FastLaneSearcherWrapper.isTrustedForwarder</a></td>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#87">FastLaneSearcherWrapper.isTrustedForwarder</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#78">FastLaneSearcherWrapper.revokeFastLaneEOA</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
@@ -97,11 +101,11 @@
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#123">SearcherContractExample.doFail</a></td>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#128">SearcherContractExample.doFail</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#108">SearcherContractExample.doStuff</a></td>
+              <td class="coverFn"><a href="FastLaneSearcherWrapper.sol.gcov.html#113">SearcherContractExample.doStuff</a></td>
               <td class="coverFnHi">3</td>
             </tr>
   </table>
