--- a/report/index-sort-f.html
+++ b/report/index-sort-f.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">244</td>
-            <td class="headerCovTableEntry">411</td>
-            <td class="headerCovTableEntryLo">59.4 %</td>
+            <td class="headerCovTableEntry">267</td>
+            <td class="headerCovTableEntry">424</td>
+            <td class="headerCovTableEntryLo">63.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 10:35:49</td>
+            <td class="headerValue">2022-11-15 17:07:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">62</td>
-            <td class="headerCovTableEntry">97</td>
-            <td class="headerCovTableEntryLo">63.9 %</td>
+            <td class="headerCovTableEntry">69</td>
+            <td class="headerCovTableEntry">100</td>
+            <td class="headerCovTableEntryLo">69.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">95</td>
-            <td class="headerCovTableEntry">160</td>
-            <td class="headerCovTableEntryLo">59.4 %</td>
+            <td class="headerCovTableEntry">101</td>
+            <td class="headerCovTableEntry">166</td>
+            <td class="headerCovTableEntryLo">60.8 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -94,40 +94,40 @@
       <td class="coverNumLo">0 / 12</td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="contracts/jit-relay/index.html">contracts/jit-relay</a></td>
-      <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=40 height=10 alt="39.6%"><img src="snow.png" width=60 height=10 alt="39.6%"></td></tr></table>
-      </td>
-      <td class="coverPerLo">39.6&nbsp;%</td>
-      <td class="coverNumLo">36 / 91</td>
-      <td class="coverPerLo">30.0&nbsp;%</td>
-      <td class="coverNumLo">9 / 30</td>
-      <td class="coverPerLo">35.7&nbsp;%</td>
-      <td class="coverNumLo">15 / 42</td>
-    </tr>
-    <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=20 height=10 alt="20.0%"><img src="snow.png" width=80 height=10 alt="20.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=26 height=10 alt="26.1%"><img src="snow.png" width=74 height=10 alt="26.1%"></td></tr></table>
       </td>
-      <td class="coverPerLo">20.0&nbsp;%</td>
-      <td class="coverNumLo">7 / 35</td>
-      <td class="coverPerLo">37.5&nbsp;%</td>
-      <td class="coverNumLo">3 / 8</td>
+      <td class="coverPerLo">26.1&nbsp;%</td>
+      <td class="coverNumLo">12 / 46</td>
+      <td class="coverPerLo">40.0&nbsp;%</td>
+      <td class="coverNumLo">4 / 10</td>
       <td class="coverPerLo">25.0&nbsp;%</td>
-      <td class="coverNumLo">1 / 4</td>
+      <td class="coverNumLo">2 / 8</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/jit-relay/index.html">contracts/jit-relay</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=59 height=10 alt="59.3%"><img src="snow.png" width=41 height=10 alt="59.3%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">59.3&nbsp;%</td>
+      <td class="coverNumLo">54 / 91</td>
+      <td class="coverPerLo">50.0&nbsp;%</td>
+      <td class="coverNumLo">15 / 30</td>
+      <td class="coverPerLo">47.6&nbsp;%</td>
+      <td class="coverNumLo">20 / 42</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/jit-searcher/index.html">contracts/jit-searcher</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=92 height=10 alt="92.0%"><img src="snow.png" width=8 height=10 alt="92.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=85 height=10 alt="85.2%"><img src="snow.png" width=15 height=10 alt="85.2%"></td></tr></table>
       </td>
-      <td class="coverPerHi">92.0&nbsp;%</td>
-      <td class="coverNumHi">23 / 25</td>
-      <td class="coverPerMed">77.8&nbsp;%</td>
-      <td class="coverNumMed">7 / 9</td>
-      <td class="coverPerLo">40.9&nbsp;%</td>
-      <td class="coverNumLo">9 / 22</td>
+      <td class="coverPerMed">85.2&nbsp;%</td>
+      <td class="coverNumMed">23 / 27</td>
+      <td class="coverPerLo">70.0&nbsp;%</td>
+      <td class="coverNumLo">7 / 10</td>
+      <td class="coverPerLo">37.5&nbsp;%</td>
+      <td class="coverNumLo">9 / 24</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/index.html">contracts</a></td>
