--- a/report/contracts/jit-searcher/index-sort-l.html
+++ b/report/contracts/jit-searcher/index-sort-l.html
@@ -32,17 +32,17 @@
             <td></td>
             <td class="headerItem">Lines:</td>
             <td class="headerCovTableEntry">23</td>
-            <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryHi">92.0 %</td>
+            <td class="headerCovTableEntry">27</td>
+            <td class="headerCovTableEntryMed">85.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 10:35:49</td>
+            <td class="headerValue">2022-11-15 17:07:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntryMed">77.8 %</td>
+            <td class="headerCovTableEntry">10</td>
+            <td class="headerCovTableEntryLo">70.0 %</td>
           </tr>
           <tr>
             <td></td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntry">22</td>
-            <td class="headerCovTableEntryLo">40.9 %</td>
+            <td class="headerCovTableEntry">24</td>
+            <td class="headerCovTableEntryLo">37.5 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="FastLaneSearcherWrapper.sol.gcov.html">FastLaneSearcherWrapper.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../emerald.png" width=92 height=10 alt="92.0%"><img src="../../snow.png" width=8 height=10 alt="92.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../amber.png" width=85 height=10 alt="85.2%"><img src="../../snow.png" width=15 height=10 alt="85.2%"></td></tr></table>
       </td>
-      <td class="coverPerHi">92.0&nbsp;%</td>
-      <td class="coverNumHi">23 / 25</td>
-      <td class="coverPerMed">77.8&nbsp;%</td>
-      <td class="coverNumMed">7 / 9</td>
-      <td class="coverPerLo">40.9&nbsp;%</td>
-      <td class="coverNumLo">9 / 22</td>
+      <td class="coverPerMed">85.2&nbsp;%</td>
+      <td class="coverNumMed">23 / 27</td>
+      <td class="coverPerLo">70.0&nbsp;%</td>
+      <td class="coverNumLo">7 / 10</td>
+      <td class="coverPerLo">37.5&nbsp;%</td>
+      <td class="coverNumLo">9 / 24</td>
     </tr>
   </table>
   </center>
