--- a/report/test/PFL_Relay.t.sol.func-sort-c.html
+++ b/report/test/PFL_Relay.t.sol.func-sort-c.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryMed">87.5 %</td>
+            <td class="headerCovTableEntry">12</td>
+            <td class="headerCovTableEntry">19</td>
+            <td class="headerCovTableEntryLo">63.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 10:35:49</td>
+            <td class="headerValue">2022-11-15 17:07:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">3</td>
-            <td class="headerCovTableEntry">5</td>
-            <td class="headerCovTableEntryLo">60.0 %</td>
+            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntry">7</td>
+            <td class="headerCovTableEntryLo">57.1 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">1</td>
             <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntry">6</td>
+            <td class="headerCovTableEntryLo">33.3 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,23 +69,31 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#224">BrokenSearcherForgotFastLaneCallFn.</a></td>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#293">BrokenSearcherForgotFastLaneCallFn.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#217">BrokenUniswap.sickTrade</a></td>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#286">BrokenUniswap.sickTrade</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#228">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#357">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#297">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#239">BrokenSearcherRepayer.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#308">BrokenSearcherRepayer.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#250">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#319">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="PFL_Relay.t.sol.gcov.html#339">SearcherRepayerEcho.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
   </table>
