--- a/report/test/index-sort-f.html
+++ b/report/test/index-sort-f.html
@@ -31,26 +31,26 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntry">35</td>
-            <td class="headerCovTableEntryLo">20.0 %</td>
+            <td class="headerCovTableEntry">12</td>
+            <td class="headerCovTableEntry">46</td>
+            <td class="headerCovTableEntryLo">26.1 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 10:35:49</td>
+            <td class="headerValue">2022-11-15 17:07:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">3</td>
-            <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">37.5 %</td>
+            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntry">10</td>
+            <td class="headerCovTableEntryLo">40.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">1</td>
-            <td class="headerCovTableEntry">4</td>
+            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">8</td>
             <td class="headerCovTableEntryLo">25.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
@@ -96,14 +96,14 @@
     <tr>
       <td class="coverFile"><a href="PFL_Relay.t.sol.gcov.html">PFL_Relay.t.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=88 height=10 alt="87.5%"><img src="../snow.png" width=12 height=10 alt="87.5%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=63 height=10 alt="63.2%"><img src="../snow.png" width=37 height=10 alt="63.2%"></td></tr></table>
       </td>
-      <td class="coverPerMed">87.5&nbsp;%</td>
-      <td class="coverNumMed">7 / 8</td>
-      <td class="coverPerLo">60.0&nbsp;%</td>
-      <td class="coverNumLo">3 / 5</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">1 / 2</td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">12 / 19</td>
+      <td class="coverPerLo">57.1&nbsp;%</td>
+      <td class="coverNumLo">4 / 7</td>
+      <td class="coverPerLo">33.3&nbsp;%</td>
+      <td class="coverNumLo">2 / 6</td>
     </tr>
   </table>
   </center>
